fix(Button): Styling on iOS for non Button elements

--- a/workspaces/package/src/Button/Button.css
+++ b/workspaces/package/src/Button/Button.css
@@ -13,6 +13,7 @@
   transition-property: border-color, background-color, color, opacity;
   transition-duration: var(--transition-duration--fast);
   transition-timing-function: var(--transition-timing-function);
+  appearance: none;
 
   &:hover {
     cursor: pointer;
